# PixelPenViewer

./: .gitignore  CMakeLists.txt  README.md  build.sh  fast_run_project.bat  memchk.sh  run_project.bat
NewProjectScripts/: USAGE.md  __init__.py  __main__.py  create_project.py  template_unit_test.py
NewProjectScripts/template_files/blank/: CMakeLists.txt  README.md  fast_run_project.sh  run_project.sh
NewProjectScripts/template_files/blank/include/: vendors.h
NewProjectScripts/template_files/blank/src/: main.cpp
NewProjectScripts/template_files/nativeview/: .gitignore  CMakeLists.txt  README.md  fast_run_Project.bat  run_project.bat
NewProjectScripts/template_files/nativeview/include/: IView.h  NativeView.h  Renderer.h  ShaderReader.h  vendors.h
NewProjectScripts/template_files/nativeview/res/: BasicVS.glsl
NewProjectScripts/template_files/nativeview/src/: NativeView.cpp  Renderer.cpp  ShaderReader.cpp  main.cpp
docs/: OpenGL_Ubuntu.txt
include/: IView.h  NativeView.h  Renderer.h  ShaderReader.h  vendors.h
res/: BasicFS.glsl  BasicPS.glsl  BasicRotateVS.glsl  BasicVS.glsl  generate_icon.py  resource.h  resource.rc
src/: NativeView.cpp  Renderer.cpp  ShaderReader.cpp  glmain.cpp
